--- a/themes/hugo-lodi-theme/layouts/partials/footer.html
+++ b/themes/hugo-lodi-theme/layouts/partials/footer.html
@@ -102,5 +102,5 @@
         {{ end }}
     </div>
 
-    <a href="#" style="color: #574cdd; text-decoration: underline;" data-scroll-goto="0">Back to top</a>
+    <a href="#" style="color: #6996CD; text-decoration: none;" data-scroll-goto="0">Back to top</a>
 </footer>
